<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".sulawesi">



    <Button
        android:id="@+id/SulawesiUtara"
        android:layout_width="135dp"
        android:layout_height="81dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="260dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/sulut"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SulawesiTengah"
        android:layout_width="132dp"
        android:layout_height="75dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="260dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/sulteng"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SulawesiSelatan"
        android:layout_width="137dp"
        android:layout_height="78dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/sulsel"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Gorontalo"
        android:layout_width="135dp"
        android:layout_height="81dp"
        android:layout_marginTop="408dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/gorontalo"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SulawesiTenggara"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/seltenggara"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SulawesiBarat"
        android:layout_width="134dp"
        android:layout_height="78dp"
        android:layout_marginTop="408dp"
        android:layout_marginEnd="260dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/sulbar"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>