<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".kalimantan">



    <Button
        android:id="@+id/kalimantanTengah"
        android:layout_width="139dp"
        android:layout_height="74dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="256dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/kalteng"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/kalimantanTimur"
        android:layout_width="137dp"
        android:layout_height="74dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/kaltim"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnkalimantanUtara"
        android:layout_width="136dp"
        android:layout_height="75dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/kalut"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/kalimantanBarat"
        android:layout_width="131dp"
        android:layout_height="70dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="164dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/kalbar"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/kalimantanSelatan"
        android:layout_width="136dp"
        android:layout_height="70dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="256dp"
        android:backgroundTint="#ffdacc"
        android:text="@string/kalsel"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>